<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clipToPadding="false"
    android:background="@android:color/white"
    tools:context=".Activity.LoginActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:elevation="30dp"
        android:background="@drawable/bg_layout_white_rounded">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imagetitle"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/trafficpal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:typeface="serif"
                android:textSize="25sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_user"
        android:inputType="text"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:lines="1"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/imagetitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/log_pass"
        android:inputType="textPassword"
        android:lines="1"
        android:layout_marginLeft="45dp"
        android:layout_below="@+id/username"
        android:layout_marginRight="45dp"
        />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:text="@string/log_show"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        />



    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/check"
        android:layout_marginTop="50dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:text="@string/log_signin"
        android:textSize="15sp"
        android:background="@drawable/bg_button_rounded"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/log_forgot"
        android:layout_below="@+id/signin"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/log_click"
        android:layout_toRightOf="@+id/forgot"
        android:layout_below="@+id/signin"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp" />
    </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:text="@string/log_bottom"/>



</RelativeLayout>

