<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white"
    tools:context=".Activity.LoginActivity">


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/name"
        android:text="@string/forgot_ins"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:lines="1"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/ins"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email1"
        android:layout_marginTop="50dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:text="@string/forgot_reset"
        android:textSize="15sp"
        android:background="@drawable/bg_button_rounded"
        android:textColor="@android:color/white"/>



</RelativeLayout>
