<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afinal.android.trafficpal.Activity.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/yourname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorPrimary"

                android:layout_marginTop="40dp"
                >
                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    android:lines="1"
                    android:hint="@string/contact_form_name" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/yoursubject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:id="@+id/your_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColor="@android:color/darker_gray"
                    android:lines="1"
                    android:hint="@string/contact_form_subject" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:paddingLeft="3dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="170dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_button_rounded"
                android:layout_marginTop="10dp"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="10dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>